[MIG] project_template: migration to 15.0
Since in  original odoo `15.0` version project subtasks
has been deleted so changes also done in this module.
We don't need project subtasks anymore because odoo don't have it.

--- a/project_template/views/project.xml
+++ b/project_template/views/project.xml
@@ -15,7 +15,7 @@
                     attrs="{'invisible': [('is_template', '=', False)]}"
                 />
             </xpath>
-            <xpath expr="//div[@name='options_active']" position="inside">
+            <xpath expr="//field[@name='label_tasks']/.." position="inside">
                 <div>
                     <field name="is_template" class="oe_inline" string="Is Template?" />
                     <label for="is_template" />
