--- a/project_timeline/views/project_task_view.xml
+++ b/project_timeline/views/project_task_view.xml
@@ -15,17 +15,17 @@
                 date_stop="date_end"
                 default_group_by="project_id"
                 event_open_popup="true"
-                colors="white: user_id == false; #2ecb71: kanban_state == 'done'; #ec7063: kanban_state == 'blocked'"
+                colors="white: user_ids == []; #2ecb71: kanban_state == 'done'; #ec7063: kanban_state == 'blocked'"
             >
-                <field name="user_id" />
+                <field name="user_ids" />
                 <field name="planned_hours" />
                 <templates>
                     <t t-name="timeline-item">
                         <div class="o_project_timeline_item">
                             <img
-                                t-if="record.user_id"
-                                t-attf-src="/web/image/res.users/#{record.user_id[0]}/image_128/16x16"
-                                t-att-title="record.user_id[1]"
+                                t-if="record.user_ids"
+                                t-attf-src="/web/image/res.users/#{record.user_ids[0][0]}/image_128/16x16"
+                                t-att-title="record.user_ids[0][1]"
                                 width="16"
                                 height="16"
                                 class="mr8"
@@ -84,11 +84,6 @@
         model="ir.actions.act_window"
     >
         <field name="view_mode">tree,form,calendar,timeline,graph,kanban</field>
-    </record>
-    <record id="project.project_task_action_sub_task" model="ir.actions.act_window">
-        <field
-            name="view_mode"
-        >kanban,tree,form,calendar,timeline,pivot,graph,activity</field>
     </record>
     <record id="project.dblc_proj" model="ir.actions.act_window">
         <field name="view_mode">tree,form,calendar,timeline,graph,kanban</field>
