--- a/project_timeline/views/project_task_view.xml
+++ b/project_timeline/views/project_task_view.xml
@@ -16,6 +16,7 @@
                 default_group_by="project_id"
                 event_open_popup="true"
                 colors="white: user_ids == []; #2ecb71: kanban_state == 'done'; #ec7063: kanban_state == 'blocked'"
+                dependency_arrow="depend_on_ids"
             >
                 <field name="user_ids" />
                 <field name="planned_hours" />
