--- a/project_task_stock/views/project_task_view.xml
+++ b/project_task_stock/views/project_task_view.xml
@@ -6,7 +6,7 @@
         <field name="inherit_id" ref="project.view_task_form2" />
         <field name="groups_id" eval="[(4, ref('stock.group_stock_user'))]" />
         <field name="arch" type="xml">
-            <xpath expr="///button[@name='action_subtask']" position="after">
+            <xpath expr="///button[@name='action_open_parent_task']" position="after">
                 <button
                     name="%(action_project_task_moves)d"
                     type="action"
