--- a/project_task_stock/views/stock_move_view.xml
+++ b/project_task_stock/views/stock_move_view.xml
@@ -24,6 +24,7 @@
             >
                 <field name="company_id" invisible="1" />
                 <field name="product_id" required="1" />
+                <field name="sequence" invisible="1" />
                 <field name="location_id" optional="hide" readonly="1" force_save="1" />
                 <field
                     name="location_dest_id"
