[MIG] project_stock_product_set: Migration to 15.0
TT40364

[UPD] Update project_stock_product_set.pot

[UPD] README.rst

--- a/project_task_stock_product_set/views/project_task_view.xml
+++ b/project_task_stock_product_set/views/project_task_view.xml
@@ -12,7 +12,7 @@
                     type="action"
                     name="%(act_open_wizard_product_set_add_from_task)d"
                     icon="fa-cubes"
-                    attrs="{'invisible': [('use_stock_moves','=',False)]}"
+                    attrs="{'invisible': ['|', ('use_stock_moves','=',False), ('done_stock_moves', '=', True)]}"
                     string="Add set"
                 />
             </xpath>
