--- a/project_task_stock/views/project_task_view.xml
+++ b/project_task_stock/views/project_task_view.xml
@@ -4,7 +4,6 @@
         <field name="name">project.task.form</field>
         <field name="model">project.task</field>
         <field name="inherit_id" ref="project.view_task_form2" />
-        <field name="groups_id" eval="[(4, ref('stock.group_stock_user'))]" />
         <field name="arch" type="xml">
             <xpath expr="///button[@name='action_open_parent_task']" position="after">
                 <button
@@ -14,6 +13,7 @@
                     class="oe_stat_button"
                     icon="fa-exchange"
                     attrs="{'invisible': [('done_stock_moves', '=', False)]}"
+                    groups="stock.group_stock_user"
                 />
                 <button
                     class="oe_stat_button"
@@ -21,6 +21,7 @@
                     type="object"
                     icon="fa-arrows-v"
                     attrs="{'invisible': [('scrap_count', '=', 0)]}"
+                    groups="stock.group_stock_user"
                 >
                     <field name="scrap_count" widget="statinfo" string="Scraps" />
                 </button>
@@ -32,14 +33,14 @@
                     attrs="{'required': [('project_id', '=', False)], 'invisible': [('use_stock_moves', '=', False)]}"
                 />
                 <field
-                    name="stock_analytic_tag_ids"
-                    groups="analytic.group_analytic_tags"
+                    name="stock_analytic_distribution"
+                    widget="analytic_distribution"
+                    groups="analytic.group_analytic_accounting"
                     attrs="{'invisible': [('use_stock_moves', '=', False)]}"
-                    widget="many2many_tags"
                 />
                 <field name="stock_analytic_date" />
             </field>
-            <field name="stage_id" position="before">
+            <field name="stage_id" position="before" groups="stock.group_stock_user">
                 <button
                     name="action_confirm"
                     string="Confirm materials"
@@ -112,6 +113,7 @@
                         name="move_ids"
                         context="{'tree_view_ref': 'project_stock.view_stock_move_raw_tree', 'form_view_ref':'stock.view_move_form', 'default_company_id': company_id, 'default_state': 'draft', 'default_raw_material_task_id': id}"
                         attrs="{'readonly': [('done_stock_moves', '=', True),('stock_moves_is_locked', '=', True)]}"
+                        groups="stock.group_stock_user"
                     />
                 </page>
             </xpath>
