--- a/project_timeline_hr_timesheet/views/project_task_view.xml
+++ b/project_timeline_hr_timesheet/views/project_task_view.xml
@@ -12,9 +12,9 @@
                 <field name="remaining_hours" />
             </field>
             <xpath expr="//small[@name='planned_hours']" position="after">
-                <div class="o_project_timeline_hr_timesheet_progress">
+                <div t-attf-class="o_project_timeline_hr_timesheet_progress">
                     <div
-                        t-att-class="record.remaining_hours &lt; 0 ? 'danger ' : ' '"
+                        t-attf-class="{{ record.remaining_hours &lt; 0 ? 'bg-danger ' : 'bg-success '}}"
                         t-attf-style="width: #{record.progress}%"
                     />
                 </div>
