--- a/project_timesheet_time_control/views/account_analytic_line_view.xml
+++ b/project_timesheet_time_control/views/account_analytic_line_view.xml
@@ -37,31 +37,30 @@
     <record id="hr_timesheet_line_form" model="ir.ui.view">
         <field name="name">account.analytic.line.form.inherit</field>
         <field name="model">account.analytic.line</field>
-        <field
-            name="inherit_id"
-            ref="hr_timesheet_task_stage.account_analytic_line_form"
-        />
+        <field name="inherit_id" ref="hr_timesheet.hr_timesheet_line_form" />
         <field name="arch" type="xml">
-            <div name="button_box" position="inside">
-                <field name="show_time_control" invisible="1" />
-                <button
-                    name="button_resume_work"
-                    type="object"
-                    icon="fa-play-circle text-success"
-                    attrs="{'invisible': [('show_time_control', '!=', 'resume')]}"
-                    class="oe_stat_button"
-                    context="{'show_created_timer': True}"
-                    title="Resume work"
-                />
-                <button
-                    name="button_end_work"
-                    type="object"
-                    icon="fa-stop-circle text-warning"
-                    attrs="{'invisible': [('show_time_control', '!=', 'stop')]}"
-                    class="oe_stat_button"
-                    title="Stop work"
-                />
-            </div>
+            <xpath expr="//sheet/group" position="before">
+                <div class="oe_button_box" name="button_box">
+                    <field name="show_time_control" invisible="1" />
+                    <button
+                        name="button_resume_work"
+                        type="object"
+                        icon="fa-play-circle text-success"
+                        attrs="{'invisible': [('show_time_control', '!=', 'resume')]}"
+                        class="oe_stat_button"
+                        context="{'show_created_timer': True}"
+                        title="Resume work"
+                    />
+                    <button
+                        name="button_end_work"
+                        type="object"
+                        icon="fa-stop-circle text-warning"
+                        attrs="{'invisible': [('show_time_control', '!=', 'stop')]}"
+                        class="oe_stat_button"
+                        title="Stop work"
+                    />
+                </div>
+            </xpath>
             <field name="date" position="attributes">
                 <attribute name="invisible">1</attribute>
             </field>
