--- a/project_timesheet_time_control/views/project_project_view.xml
+++ b/project_timesheet_time_control/views/project_project_view.xml
@@ -4,13 +4,13 @@
         <field name="name">Add timesheet time controls</field>
         <field name="model">project.project</field>
         <field name="inherit_id" ref="hr_timesheet.project_invoice_form" />
-        <field
-            name="groups_id"
-            eval="[(6, 0, [ref('hr_timesheet.group_hr_timesheet_user')])]"
-        />
         <field name="arch" type="xml">
             <div name="button_box" position="inside">
-                <field name="show_time_control" invisible="1" />
+                <field
+                    name="show_time_control"
+                    invisible="1"
+                    groups="hr_timesheet.group_hr_timesheet_user"
+                />
                 <button
                     name="button_start_work"
                     string="Start work"
@@ -19,6 +19,7 @@
                     attrs="{'invisible': [('show_time_control', '!=', 'start')]}"
                     class="oe_stat_button"
                     title="Start work"
+                    groups="hr_timesheet.group_hr_timesheet_user"
                 />
                 <button
                     name="button_end_work"
@@ -28,6 +29,7 @@
                     attrs="{'invisible': [('show_time_control', '!=', 'stop')]}"
                     class="oe_stat_button"
                     title="End work"
+                    groups="hr_timesheet.group_hr_timesheet_user"
                 />
             </div>
         </field>
@@ -36,19 +38,20 @@
         <field name="name">Add timesheet time controls</field>
         <field name="model">project.project</field>
         <field name="inherit_id" ref="hr_timesheet.view_project_kanban_inherited" />
-        <field
-            name="groups_id"
-            eval="[(6, 0, [ref('hr_timesheet.group_hr_timesheet_user')])]"
-        />
         <field name="arch" type="xml">
             <xpath expr="//*[hasclass('o_project_kanban_boxes')]" position="inside">
-                <field name="show_time_control" invisible="1" />
+                <field
+                    name="show_time_control"
+                    invisible="1"
+                    groups="hr_timesheet.group_hr_timesheet_user"
+                />
                 <a
                     name="button_start_work"
                     tabindex="-1"
                     type="object"
                     attrs="{'invisible': [('show_time_control', '!=', 'start')]}"
                     class="o_project_kanban_box"
+                    groups="hr_timesheet.group_hr_timesheet_user"
                 >
                     <div>
                         <span class="o_label">
@@ -63,6 +66,7 @@
                     type="object"
                     attrs="{'invisible': [('show_time_control', '!=', 'stop')]}"
                     class="o_project_kanban_box"
+                    groups="hr_timesheet.group_hr_timesheet_user"
                 >
                     <div>
                         <span class="o_label">
@@ -78,13 +82,13 @@
         <field name="name">Add timesheet time controls</field>
         <field name="model">project.project</field>
         <field name="inherit_id" ref="project.view_project" />
-        <field
-            name="groups_id"
-            eval="[(6, 0, [ref('hr_timesheet.group_hr_timesheet_user')])]"
-        />
         <field name="arch" type="xml">
             <tree position="inside">
-                <field name="show_time_control" invisible="1" />
+                <field
+                    name="show_time_control"
+                    invisible="1"
+                    groups="hr_timesheet.group_hr_timesheet_user"
+                />
                 <button
                     name="button_start_work"
                     string="Start work"
@@ -94,6 +98,7 @@
                     attrs="{'invisible': [('show_time_control', '!=', 'start')]}"
                     class="oe_stat_button"
                     title="Start work"
+                    groups="hr_timesheet.group_hr_timesheet_user"
                 />
                 <button
                     name="button_end_work"
@@ -104,6 +109,7 @@
                     attrs="{'invisible': [('show_time_control', '!=', 'stop')]}"
                     class="oe_stat_button"
                     title="End work"
+                    groups="hr_timesheet.group_hr_timesheet_user"
                 />
             </tree>
         </field>
