--- a/project_timesheet_time_control/wizards/hr_timesheet_switch_view.xml
+++ b/project_timesheet_time_control/wizards/hr_timesheet_switch_view.xml
@@ -23,13 +23,15 @@
                         <field name="project_id" required="1" />
                         <field name="task_id" />
                         <field name="company_id" groups="base.group_multi_company" />
+                        <field name="company_id" invisible="1" />
                     </group>
                     <group
                         name="messages"
                         string="Previous timer"
                         attrs="{'invisible': [('running_timer_id', '=', False)]}"
+                        col="4"
                     >
-                        <p>
+                        <p colspan="4">
                             You have a running timer called
                             <field
                                 name="running_timer_id"
@@ -43,13 +45,13 @@
                             <strong>
                                 <field
                                     name="running_timer_duration"
-                                    class="text-info"
+                                    class="oe_inline text-info"
                                     widget="float_time"
                                     attrs="{'invisible': [('running_timer_duration', '&gt;=', 5)]}"
                                 />
                                 <field
                                     name="running_timer_duration"
-                                    class="text-warning"
+                                    class="oe_inline text-warning"
                                     widget="float_time"
                                     attrs="{'invisible': [('running_timer_duration', '&lt;', 5)]}"
                                 />
