[MIG] project_key: Migration to 16.0
aronabencherif.diatta@xcg.africa: Update with 'model_create_multi'
decorator to allow several records to be taken at once

vincent.hatakeyama@xcg-consulting.fr: Fix _rec_names_search on project by
including 'name'. Fix task creation.

--- a/project_key/views/project_key_views.xml
+++ b/project_key/views/project_key_views.xml
@@ -103,10 +103,10 @@
         <field name="model">project.project</field>
         <field name="inherit_id" ref="project.view_project_kanban" />
         <field name="arch" type="xml">
-            <field name="name" position="after">
+            <field name="display_name" position="after">
                 <field name="key" />
             </field>
-            <xpath expr="//t[@t-esc='record.name.value']" position="before">
+            <xpath expr="//t[@t-esc='record.display_name.value']" position="before">
                 <t t-esc="record.key.value" />  -
             </xpath>
         </field>
