--- a/project_role/views/project_assignment.xml
+++ b/project_role/views/project_assignment.xml
@@ -16,7 +16,7 @@
                         name="web_ribbon"
                         title="Archived"
                         bg_color="bg-danger"
-                        attrs="{'invisible': [('active', '=', True)]}"
+                        invisible="active"
                     />
                     <field name="active" invisible="1" />
                     <group>
@@ -51,7 +51,7 @@
                 <field
                     name="project_id"
                     domain="[('active', '=', True)]"
-                    invisible="context.get('default_project_id', False)"
+                    column_invisible="context.get('default_project_id', False)"
                 />
                 <field name="role_id" />
                 <field name="user_id" domain="[('active', '=', True)]" />
