--- a/project_role/views/res_config_settings.xml
+++ b/project_role/views/res_config_settings.xml
@@ -9,7 +9,7 @@
         <field name="model">res.config.settings</field>
         <field name="inherit_id" ref="project.res_config_settings_view_form" />
         <field name="arch" type="xml">
-            <xpath expr="//div[@data-key='project']" position="inside">
+            <xpath expr="//app[@name='project']" position="inside">
                 <div name="section_roles_and_assignments">
                     <h2>Roles &amp; Assignments</h2>
                     <div class="row mt16 o_settings_container">
