[IMP] project_task_pull_request: Migration to 16.0
[UPD] Update project_task_pull_request.pot

Update translation files

Updated by "Update PO files to match POT (msgmerge)" hook in Weblate.

Translation: project-16.0/project-16.0-project_task_pull_request
Translate-URL: https://translation.odoo-community.org/projects/project-16-0/project-16-0-project_task_pull_request/

--- a/project_task_pull_request/views/project_task_pull_request_view.xml
+++ b/project_task_pull_request/views/project_task_pull_request_view.xml
@@ -25,7 +25,7 @@
         <field name="model">project.project</field>
         <field name="inherit_id" ref="project.edit_project" />
         <field name="arch" type="xml">
-            <xpath expr="//group[@name='extra_settings']" position="inside">
+            <xpath expr="//group[@name='extra_settings']" position="before">
                 <group string="Pull Request URIs">
                     <field name="pr_required_states" widget="many2many_checkboxes" />
                 </group>
