--- a/project_parent/views/project_parent_views.xml
+++ b/project_parent/views/project_parent_views.xml
@@ -32,7 +32,7 @@ License LGPL-3.0 or later (http://www.gnu.org/licenses/lgpl.html). -->
         <field name="inherit_id" ref="project.view_project" />
         <field name="arch" type="xml">
             <field name="partner_id" position="after">
-                <field name="parent_id" />
+                <field name="parent_id" optional="show" />
             </field>
         </field>
     </record>
@@ -46,7 +46,7 @@ License LGPL-3.0 or later (http://www.gnu.org/licenses/lgpl.html). -->
             </field>
             <xpath
                 expr="//div[hasclass('o_project_kanban_main')]/div[last()]"
-                position="after"
+                position="inside"
             >
                 <div class="o_primary">
                     <span>
@@ -65,6 +65,13 @@ License LGPL-3.0 or later (http://www.gnu.org/licenses/lgpl.html). -->
             <field name="name" position="after">
                 <field name="parent_id" />
             </field>
+            <filter name="groupby_stage" position="after">
+                  <filter
+                    string="Parent Project"
+                    name="group_parent_id"
+                    context="{'group_by':'parent_id'}"
+                />
+               </filter>
         </field>
     </record>
 </odoo>
