[IMP] project_stock_product_set: Adapt wizard to changes in product_set
Moved some of the logic shared by the wizard defined in the module
sale_product_set to the module product_set so the dependency of
project_stock_product_set should now be on product_set.

[UPD] Update project_stock_product_set.pot

[BOT] post-merge updates

Update translation files

Updated by "Update PO files to match POT (msgmerge)" hook in Weblate.

Translation: project-16.0/project-16.0-project_stock_product_set
Translate-URL: https://translation.odoo-community.org/projects/project-16-0/project-16-0-project_stock_product_set/

--- a/project_task_stock_product_set/wizard/project_stock_product_set_wizard_view.xml
+++ b/project_task_stock_product_set/wizard/project_stock_product_set_wizard_view.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <odoo>
     <record id="product_set_add_from_task_form_view" model="ir.ui.view">
-        <field name="name">product.set.add.from.taskform.view</field>
-        <field name="model">product.set.add.from.task</field>
+        <field name="name">project.stock.product.set.form.view</field>
+        <field name="model">project.stock.product.set.wizard</field>
         <field name="arch" type="xml">
             <form>
                 <group name="main" colspan="4">
@@ -46,7 +46,7 @@
         model="ir.actions.act_window"
     >
         <field name="name">Add a set in a project task</field>
-        <field name="res_model">product.set.add.from.task</field>
+        <field name="res_model">project.stock.product.set.wizard</field>
         <field name="view_mode">form</field>
         <field name="view_id" ref="product_set_add_from_task_form_view" />
         <field name="domain">[]</field>
