--- a/project_department/views/project.xml
+++ b/project_department/views/project.xml
@@ -30,17 +30,16 @@
          </field>
      </record>
 
-     <record id="view_project" model="ir.ui.view">
-         <field name="name">project.project.tree</field>
-         <field name="model">project.project</field>
-         <field name="inherit_id" ref="project.view_project" />
-         <field name="type">tree</field>
-         <field name="field_parent">child_ids</field>
-         <field name="arch" type="xml">
-             <field name="user_id" position="after">
-                  <field name="department_id" />
-              </field>
-         </field>
+    <record id="view_project" model="ir.ui.view">
+        <field name="name">project.project.tree</field>
+        <field name="model">project.project</field>
+        <field name="inherit_id" ref="project.view_project" />
+        <field name="type">tree</field>
+        <field name="arch" type="xml">
+            <field name="user_id" position="after">
+                <field name="department_id" readonly="True" />
+            </field>
+        </field>
      </record>
 
     <record id="view_task_search_form" model="ir.ui.view">
